expected/main/gens/primBitCompare-neg-32.err
ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 3
external a {primBitEq 1000} :: Bit 1000 -> Bit 1000 -> Flag  -- large width values
         ^
No generated implementation: Argument value 1000 is too large; must be less than 1000

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 4
external b {primBitNe 1G}   :: Bit 1G   -> Bit 1G   -> Flag
         ^
No generated implementation: Argument value 1073741824 is too large; must be less than 1000

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 5
external c {primBitGt 2K}   :: Bit 2K   -> Bit 2K   -> Flag
         ^
No generated implementation: Argument value 2048 is too large; must be less than 1000

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 6
external d {primBitGe 1001} :: Bit 1001 -> Bit 1001 -> Flag
         ^
No generated implementation: Argument value 1001 is too large; must be less than 1000

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 7
external e {primBitLt Word} :: Bit 31   -> Bit 31   -> Flag  -- not a number
         ^
No generated implementation: Argument 1 (Word) does not have expected kind (nat)

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 8
external f {primBitLe}      :: Bit 32   -> Bit 32   -> Flag  -- missing param
         ^
No generated implementation: primBitLe requires (at least) 1 arguments

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 11
external sgt33 {primBitSGt 33} :: Bit 33 -> Bit 33 -> Flag
         ^
No generated implementation: Bit vector of width 33 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 12
external sgt48 {primBitSGt 48} :: Bit 48 -> Bit 48 -> Flag
         ^
No generated implementation: Bit vector of width 48 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 13
external sgt64 {primBitSGt 64} :: Bit 64 -> Bit 64 -> Flag
         ^
No generated implementation: Bit vector of width 64 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 16
external sge33 {primBitSGe 33} :: Bit 33 -> Bit 33 -> Flag
         ^
No generated implementation: Bit vector of width 33 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 17
external sge48 {primBitSGe 48} :: Bit 48 -> Bit 48 -> Flag
         ^
No generated implementation: Bit vector of width 48 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 18
external sge64 {primBitSGe 64} :: Bit 64 -> Bit 64 -> Flag
         ^
No generated implementation: Bit vector of width 64 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 21
external slt33 {primBitSLt 33} :: Bit 33 -> Bit 33 -> Flag
         ^
No generated implementation: Bit vector of width 33 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 22
external slt48 {primBitSLt 48} :: Bit 48 -> Bit 48 -> Flag
         ^
No generated implementation: Bit vector of width 48 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 23
external slt64 {primBitSLt 64} :: Bit 64 -> Bit 64 -> Flag
         ^
No generated implementation: Bit vector of width 64 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 26
external sle33 {primBitSLe 33} :: Bit 33 -> Bit 33 -> Flag
         ^
No generated implementation: Bit vector of width 33 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 27
external sle48 {primBitSLe 48} :: Bit 48 -> Bit 48 -> Flag
         ^
No generated implementation: Bit vector of width 48 does not fit in a single word

ERROR: "actual/main/gens/primBitCompare-neg-32.lc", line 28
external sle64 {primBitSLe 64} :: Bit 64 -> Bit 64 -> Flag
         ^
No generated implementation: Bit vector of width 64 does not fit in a single word

ERROR: Aborting after 18 previously reported errors

